<resources>

    <string name="app_name">Cards</string>

    <string name="label_details">Details</string>
    <string name="label_current_balance">Current balance</string>
    <string name="label_usd">USD</string>
    <string name="label_min_payment">Min. payment</string>
    <string name="label_due_date">Due date</string>
    <string name="label_available">Available</string>
    <string name="label_cards">Cards</string>
    <string name="label_trans">Transactions</string>
    <string name="label_state">Statements</string>
    <string name="label_more">More</string>

    <string name="card_premium">Premium Card</string>

    <string name="sample_value_decimal">0.00</string>
    <string name="sample_value_date">01.01.1970</string>
    <string name="sample_value_card_image_slider_counter">0/0</string>

    <string name="error_during_downloading_cards">An error occurred during downloading the cards.</string>
    <string name="warn_feature_not_supported">Feature not supported yet.</string>

    <string name="card_unknown">Unknown card</string>
    <string name="card_journey">Journey card</string>
    <string name="card_rewards">Rewards card</string>

</resources>
